# glass-box_World_Cup_predictor

./: .gitattributes  .gitignore  DATA_SOURCES.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: main.py
app/: streamlit_app.py
app/components/: __init__.py  bracket.py  home.py  matchday.py  team_page.py
core/: __init__.py  bracket.py  config.py  elo.py  explain.py  features.py  fixtures.py  flags.py  ingest.py  knockout.py  live.py  model.py  ranking.py  simulate.py  squads.py  team_page.py
data/: fifa_ranking_2026.json  fifa_world_cup_2026_rules.json  squads2026.json  wc2026.json
models/: metrics.json  model.joblib
reports/: sim_1M.json
scripts/: build_dataset.py  build_squads_snapshot.py  make_figures.py  simulate_full.py  train.py  update_results.py
tests/: conftest.py  test_bracket.py  test_bracket_played.py  test_features_no_leakage.py  test_fixtures.py  test_flags.py  test_knockout.py  test_live_results.py  test_simulate_format.py  test_symmetry.py  test_team_page.py
